removed obsolete stuff
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/branches/eSciDocCoreAdmin/1.2/eSciDocCoreAdmin/@36059 5c398c58-3d0a-0410-a38c-d0825f6816e0